# rlCraft

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  flake.nix  raylib.nix  run.sh
assets/: Texture.xcf  world.frag  world.vert
src/: 3dText.c  3dText.cpp  3dText.h  block.c  block.cpp  block.h  camera.c  camera.cpp  camera.h  chunk.c  chunk.cpp  chunk.h  linkedList.c  linkedList.cpp  linkedList.h  main.c  main.cpp  mesh.c  mesh.cpp  mesh.h  noise.cpp  noise.h  progressBar.cpp  progressBar.h  rl.h  types.h  world.cpp  world.h
